users and groups settings  were moved from security to config.ini

--- a/development.example.ini
+++ b/development.example.ini
@@ -16,6 +16,12 @@ pyramid.includes = pyramid_debugtoolbar
 sqlalchemy.url = postgresql://DATABASE_USER_NAME:DATABASE_PASSWORD@0.0.0.0/DATABASE_NAME
 mako.directories = metro4all:templates/
 
+# 'user_name' : 'password'
+USERS = {'admin': 'iwfQT'}
+
+# 'user_name' : 'group(s)'
+GROUPS = {'admin': ['group:admin']}
+
 ###
 # wsgi server configuration
 ###
